--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Required meta tags -->
-    <meta charset="utf-8">
+    <meta charset="utf-8">\
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/fontawesome.css">
@@ -15,7 +15,9 @@
     <!-- The Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light menu shadow fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <div class="logo">
+          <img src="../portfolio-2/assets/images/Brand Assets Download (ab42fd76-5e51-46ea-90f3-05518de8052e)/Logo Files/For Web/svg/Color logo - no background.svg" alt="Brand Logo">
+        </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -46,10 +48,9 @@
           <div class="col-md-6 intros">
             <h1 class="display-2">
               <span class="display-2--intro">Hey! I'm Pascal</span>
-              <span class="display-2--description lh-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. </span>
             </h1>
             <button type="button" class="rounded-pill btn-rounded">
-              Get in touch
+              <a href="#form" style="text-decoration: none;"> Get in touch!</a>
               <span>
                 <i class="fas fa-arrow-right"></i>
               </span>
@@ -183,27 +184,22 @@
           <h1 class="display-3 fw-bold text-capitalize">Get Started</h1>
           <div class="heading-line"></div>
           <p class="lh-lg">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo quisquam consequuntur in. Nesciunt neque blanditiis a dolor ipsa. Possimus mollitia consequuntur atque sunt harum libero error, facere accusantium iusto fugit.12
-          </p>
+            You can either fill out this form or <a href="https://www.linkedin.com/in/pascal-mirchev/" id="linkedin-link">Click Here</a> to get to my LinkedIn.
+          </p> 
         </div>
         <!-- CTA CONTENT -->
         <div class="row text-white">
           <div class="col-12 col-lg-6 gradient shadow p-3">
             <div class="cta-info w-100">
               <h4 class="display- fw-bold">100% SATISFACTION GUARANTEED</h4>
-              <p class="lh-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum a quaerat dolorum obcaecati nisi. Odit pariatur ex dolor cum consectetur. Exercitationem!</p>
-              <h3 class="display-3--brief"></h3>
-              <ul class="cta-info__list">
-                <li>lorem ipsum</li>
-                <li>lorem ipsum</li>
-                <li>lorem ipsum</li>
-              </ul>
+              <p class="lh-lg">Fill out this form to contact me!</p>
+            
             </div>
           </div>
           <div class="col-12 col-lg-6 bg-white shadow p-3">
             <div class="form w-100 pb-2">
               <h4 class="display-3 title mb-5">Contact Me!</h4>
-              <form action="#" class="row">
+              <form action="#" class="row" id="form">
                 <div class=" col-lg-6 col-m-6 mb-3">
                   <input type="text" placeholder="First Name" id="inputFirstName" class="shadow form-control form-control-lg">
                 </div>
@@ -228,7 +224,27 @@
         </div>
     </div>
   </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+  <!-- START OF FOOTER SECTION -->
+
+  <footer class="footer">
+    <div class="container">
+      <!-- SOCIAL MEDIA CONTENT SECTION -->
+      <div class="social-media">
+        <div class="container">
+          <div class="row py-4 text-center">
+            <div class="col-lg-12 text-center">
+              <a href="https://github.com/paslm"><i class="fab fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/pascal-mirchev/"><i class="fab fa-linkedin"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>    
+    </div>
+  </footer>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 
 
